--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,24 @@ server {
     root /var/www/html;
     index index.html;
 
-    # Handle SPA routing
+    # Handle SPA routing with proper error handling
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ @fallback;
+    }
+
+    # Fallback for SPA routes
+    location @fallback {
+        # Check if the request is for a valid file extension
+        if ($uri ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$) {
+            return 404;
+        }
+        
+        # For all other requests, serve index.html
+        try_files /index.html =404;
     }
 
     # Cache static assets
-    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
+    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1M;
         add_header Cache-Control "public, immutable";
     }
