--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,23 @@
 # Apache configuration for Nuxt.js SPA
 RewriteEngine On
 
-# Handle Angular and Vue.js routes
+# Prevent infinite redirects for invalid URLs
+RewriteCond %{QUERY_STRING} ^.*/~and~/.*$ [NC]
+RewriteRule ^(.*)$ /404 [R=301,L]
+
+# Handle static files first
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^(.*)$ - [L]
+
+# Handle directories
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^(.*)$ - [L]
+
+# Handle Angular and Vue.js routes (only for valid SPA routes)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+RewriteCond %{REQUEST_URI} !^/(404|500)$
+RewriteRule ^(.*)$ /index.html [L]
 
 # Security headers
 Header always set X-Content-Type-Options nosniff
@@ -12,7 +25,7 @@ Header always set X-Frame-Options DENY
 Header always set X-XSS-Protection "1; mode=block"
 
 # Cache static assets
-<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg)$">
+<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
     ExpiresActive On
     ExpiresDefault "access plus 1 month"
 </FilesMatch>
